--- a/main.html
+++ b/main.html
@@ -7,6 +7,40 @@
 </head>
 
 <body>
+    <label for="name">Name</label>
+	<input placeholder="Name" type="text" id="name" required></input>
+
+	<label for="email">Email</label>
+	<input placeholder="Email" type="Email" id="email" required></input>
+
+	<label for="gender_m">Gender</label>
+	<input  type="radio" id="gender_m" name="gender" required>	Male</input>
+
+	<label for="gender_f"></label>
+	<input  type="radio" id="gender_f" name="gender"required>Female</input>
+
+	<select placeholder="--Please choose an option--" type="select" id="cars" required>
+		<option>BMW</option>
+		<option>audi</option>
+		<option>nano</option>
+	</select>
+
+	<label for="age">Age</label>
+	<input placeholder="Age" type="number" id="age" required></input>
+
+	<label for="dob">DOB</label>
+	<input  type="date" id="dob" required></input>
+
+	<label for="phone number">Phone Number</label>
+	<input placeholder="xxx-xxx-xxxx" type="Tel" id="tel"></input>
+
+	<label for="password">Password</label>
+	<input placeholder="Password" type="Password" id="password" required></input>
+
+	<label for="tos">I agree to the TOS</label>
+	<input type="checkbox" id="tos" required></input>
+
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
