--- a/main.html
+++ b/main.html
@@ -1,54 +1,48 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
 	<form method="post">
-    <label for="name">Name</label>
-	<input placeholder="Name" type="text" id="name" required></input>
+        <label for="name">Name</label>
+	    <input placeholder="Name" type="text" id="name" required>
 
-	<label for="email">Email</label>
-	<input placeholder="Email" type="Email" id="email" required></input>
+	    <label for="email">Email</label>
+	    <input placeholder="Email" type="Email" id="email" required>
 
-	<label for="gender_m">Gender</label>
-	<input  type="radio" id="gender_m" name="gender" required>	Male</input>
+	    <label for="gender_m">Gender</label>
+	    <input type="radio" id="gender_m" name="gender" value="Male" required> Male
 
-	<label for="gender_f"></label>
-	<input  type="radio" id="gender_f" name="gender"required>Female</input>
+	    <label for="gender_f">Female</label>
+	    <input type="radio" id="gender_f" name="gender" value="Female" required> Female
 
-		<label for="cars">Select a Car</label>
-	<select placeholder="--Please choose an option--" type="select" id="cars" required>
-		<option>BMW</option>
-		<option>audi</option>
-		<option>nano</option>
-	</select>
+	    <label for="cars">Select a Car</label>
+	    <select id="cars" required>
+            <option disabled selected>--Please choose an option--</option>
+		    <option>BMW</option>
+		    <option>Audi</option>
+		    <option>Nano</option>
+	    </select>
 
-	<label for="age">Age</label>
-	<input placeholder="Age" type="number" id="age" required></input>
+	    <label for="age">Age</label>
+	    <input placeholder="Age" type="number" id="age" required>
 
-	<label for="dob">DOB</label>
-	<input  type="date" id="dob" required></input>
+	    <label for="dob">DOB</label>
+	    <input type="date" id="dob" required>
 
-	<label for="phone number">Phone Number</label>
-	<input placeholder="xxx-xxx-xxxx" type="Tel" id="tel"></input>
+	    <label for="tel">Phone Number</label>
+	    <input placeholder="xxx-xxx-xxxx" type="tel" id="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
 
-	<label for="password">Password</label>
-	<input placeholder="Password" type="Password" id="password" required></input>
+	    <label for="password">Password</label>
+	    <input placeholder="Password" type="password" id="password" required>
 
-	<label for="tos">I agree to the TOS</label>
-	<input type="checkbox" id="tos" required></input>
+	    <label for="tos">I agree to the TOS</label>
+	    <input type="checkbox" id="tos" required>
 
-	<button type="submit">Submit</button>
+	    <button type="submit">Submit</button>
 	</form>
-	
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
 
+    <script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
